# AnkyloScan

./: README.md  docker-compose.yml  reinstall.sh  structure  todo
api/: Dockerfile  requirements.txt
api/app/: account.py  database.py  main.py  scan.py
api/app/scanner/: main.py
backend/: Dockerfile  requirements.txt
backend/app/: db.py
backend/app/api/: account.py  agent.py  dashboard.py  database.py  email.py  email_sender.py  liste.py  logs.py  main.py  planificateur.py  scan.py
backend/app/api/agent/: ad.ps1  ad.py  agent2.ps1  agent3.ps1  agent3.sh
backend/app/scanner/: database_handler.py  email_sender.py  main.py  tasks.py
backend/app/secu/: db.py  main.py
frontend/: Dockerfile
frontend/src/: about.html  contact.html  index.html  router.js  script.js  style.css  work.html
frontend/src/api/: account.js
frontend/src/js/: affichage.js  agent.js  dashboard.js  email.js  list.html  list.js  login.js  logs.js  me.js  result.js  setup.js  work.js
frontend/src/style/: about.css  contact.css  email.css  index.css  landing.css  login.css  menu.css  profile.css  result.css  work.css
frontend/src/view/: about.html  account.html  agent.html  contact.html  dashboard.html  email.html  landing.html  list.html  login.html  logs.html  profile.html  result.html  work.html
mysql/: Dockerfile  my.cnf
mysql/init/: init.sql
scanner/: Cargo.toml  Dockerfile  database_handler.py  main.py
scanner/src/: main.rs
